--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "role": "lead"
         }
     ],
-    "version": "2.1.5.1",
+    "version": "2.1.5.2",
     "time": "2023-12-05",
     "repositories": [
     ],
@@ -25,8 +25,8 @@
     "replace": {
     },
     "autoload": {
-        "psr-0": {
-            "Horde_Socket_Client": "lib/"
+        "psr-4": {
+            "Horde\\Socket\\": "lib/Horde/Socket/"
         }
     }
 }
